[gd_scene load_steps=2 format=3 uid="uid://b1wq0i60r4kvs"]

[ext_resource type="Script" path="res://Menus/server_selection.gd" id="1_b5jyw"]

[node name="ServerSelection" type="Control" node_paths=PackedStringArray("port_edit", "address_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5jyw")
port_edit = NodePath("CenterContainer/VBoxContainer/HBoxContainer2/PortEdit")
address_edit = NodePath("CenterContainer/VBoxContainer/HBoxContainer/AddressEdit")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "IP:"

[node name="AddressEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Port:"

[node name="PortEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
